lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/http_etag_matches/http_etag_matches2/http_etag_matches2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/http_etag_matches/http_etag_matches2/http_etag_matches2.c:24:5: error: use of undeclared identifier 'http_method_t'
    http_method_t e_1_i = e_1_i_enum_index % 41;
    ^
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/http_etag_matches/http_etag_matches2/http_etag_matches2.c:26:30: warning: implicit declaration of function 'http_method_buf' is invalid in C99 [-Wimplicit-function-declaration]
    const buffer * s__etag = http_method_buf(e_1_i);
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 2 errors generated.
